--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Amazon Transcribe WebSocket API - Sample Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.27/dist/shoelace/shoelace.css">
+    <link rel="stylesheet" href="https://cdnjs.loli.net/ajax/libs/shoelace-css/1.0.0-beta24/shoelace.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
